# RAG-AI-Chatbot

./: .env.example  .gitignore  HollandRAGGUI.java  OVERVIEW.md  README.md  agents.py  comparative_eval.py  compute_standard_metrics.py  conversation_store.py  crawler.py  custome_types.py  data_loader.py  ground_truth.json  java_bridge.py  llm_service.py  main.py  pyproject.toml  query_rewriter.py  recreate_charts.py  reranker.py  semantic_cache.py  system_architecture.md  thesis_eval.py  vector_db.py  web_search.py
scripts/: analyze_cv_education.py  analyze_cv_riasec.py  analyze_riasec_raw.py  direct_ingest.py  discover_tags.py  ingest_cvs_batch.py  ingest_references.py  ingest_riasec_data.py  re-ingest_holland.py  stats_cv.py  stats_riasec.py  sync_ground_truth.py  transform_riasec_holland.py  verify_change.py
tests/: pipeline_validation.py  thorough_test.py
tests/contract/: test_models.py
tests/integration/: test_api.py
tests/snapshot/: test_e2e_snapshot.py
tests/snapshot/snapshots/test_e2e_snapshot/test_routing_golden_snapshot/: routing_decisions.json
