[project]
name = "rag-production"
version = "0.1.0"
description = "RAG Production"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "fastapi",
    "inngest",
    "httpx",
    "beautifulsoup4",
    "uvicorn[standard]",
    "python-dotenv",
    "llama-index-core",
    "sentence-transformers==2.6.1",
    "transformers==4.41.2",
    # PyTorch 2.10+ dropped macOS x86_64 wheels; pin to a known-good build for Intel Macs.
    "torch==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "qdrant-client",
    "rank-bm25>=0.2.2",
    "Pillow",  # llama-index-core depends on PIL
    "tavily-python",
    # NumPy compatibility for Torch/Transformers/Sentence-Transformers on macOS x86_64
    "numpy<2",
    "pytest>=9.0.2",
    "pytest-snapshot>=0.9.0",
    "pytest-asyncio>=1.3.0",
    "slowapi>=0.1.9",
    "playwright>=1.58.0",
    "bert-score>=0.3.13",
    "torch>=2.2.2",
    "datasets>=4.8.4",
    "langchain-openai>=1.1.12",
    "python-docx>=1.2.0",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17.0",
]

[tool.uv]
# Ensure the lock contains wheels compatible with Intel macOS.
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
